# myaot

./: .gitignore  MODULE.bazel  go.mod
cmd/myaot/: BUILD.bazel  compile.go
pkg/ccutil/: BUILD.bazel
pkg/compile/: BUILD.bazel  compile.go  rt_c
pkg/iomisc/: BUILD.bazel
pkg/signext/: BUILD.bazel
